--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -111,3 +111,15 @@ TYPE, ABSTRACT :: FILE_HANDLE
 описание данных и алгоритмов можно без изменений
 применять к различным типам данных
 
+### Переопределение процедуры
+- Процедура в потомке может быть переопределена
+(overridden)
+- Его можно запретить:
+PROCEDURE, NON_OVERRIDABLE :: proc2
+
+### Завершающие процедуры
+- Производный тип является завершаемым (finalizable), если у
+него есть какая-либо завершающая подпрограмма
+- Их назначение — выполнять операции очистки, такие как
+освобождение целевых объектов компонентов ссылки, когда
+объект типа перестает существовать
